<?xml version="1.0"?>
<package format="2">
  <name>graph</name>
  <version>0.0.0</version>
  <description>The graph package</description>

  <maintainer email="dark@todo.todo">dark</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
